force-app/main/default/objects/Country__mdt/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>