force-app/main/default/objects/Country__mdt/fields/continent__c.field-meta.xml
<CustomField>
    <fullName>continent__c</fullName>
    <label>continent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>