force-app/main/default/objects/Country__mdt/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>